--- a/season/index.html
+++ b/season/index.html
@@ -62,7 +62,7 @@ a:visited {
 
 <div class="bgimg">
   <div class="topleft">
-    <p>Caping Cube </p>
+    <p>Caping Cube Season 3</p>
   </div>
   <div class="middle">
     <h1>COMING SOON</h1>
@@ -76,7 +76,7 @@ a:visited {
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Jan 5, 2024 15:37:25").getTime();
+var countDownDate = new Date("Dec 13, 22 00:00:00").getTime();
 
 // Update the count down every 1 second
 var countdownfunction = setInterval(function() {
@@ -100,7 +100,7 @@ var countdownfunction = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(countdownfunction);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("demo").innerHTML = "The New Season Of CapingCube Is Now Here.";
   }
 }, 1000);
 </script>
