--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ a:visited {
 
 <div class="bgimg">
   <div class="topleft">
-    <p>Caping Cube - Staff </p>
+    <p>Caping Cube - Home </p>
   </div>
   <div class="middle">
     <h1>COMING SOON</h1>
