Caping Cube - Season

--- a/season/index.html
+++ b/season/index.html
@@ -3,6 +3,7 @@
 <title>
   Caping Cube - Home
 </title>
+<meta name="description" content= "Check Out When The New Season Of Caping Cube Comes Out" />
 <style>
 body, html {
   height: 100%;
