Caping Cube - Season

--- a/season/index.html
+++ b/season/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>
-  Caping Cube - Home
+  Caping Cube - Season
 </title>
 <meta name="description" content= "Check Out When The New Season Of Caping Cube Comes Out" />
 <style>
