--- a/season/index.html
+++ b/season/index.html
@@ -11,7 +11,7 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('https://i8.ae/zMHdr');
+  background-image: url('https://i8,ae/ofqWS');
   height: 100%;
   background-position: center;
   background-size: cover;
