--- a/season/index.html
+++ b/season/index.html
@@ -11,7 +11,7 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('IMG_9444_1.png');
+  background-image: url('./IMG_9444_1.png');
   height: 100%;
   background-position: center;
   background-size: cover;
