--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('https://i8.ae/zMHdr');
+  background-image: url('./IMG_9444_1.png');
   height: 100%;
   background-position: center;
   background-size: cover;
