--- a/season/index.html
+++ b/season/index.html
@@ -64,10 +64,10 @@ a:visited {
 
 <div class="bgimg">
   <div class="topleft">
-    <p>Caping Cube - Season 3 </p>
+    <p>Caping Cube</p>
   </div>
   <div class="middle">
-    <h1 class="cube">COMING SOON</h1>
+    <h1 class="cube">Season 3</h1>
     <hr>
     <p id="demo" style="font-size:30px"></p>
   </div>
